welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: not found: value A
if (msglu==A){
           ^