welcome.lessons.welcome.bdr.BDR.scala.code
var fini = false 
var msglu = litMessage()
if (estSurMessage()) {
	litMessage()
}
if (msglu==A){
	avance()
}
